Feat: OG 작업, font 세팅, 폴더구조 세팅

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!--SEO-->
     <title>Minyoung&#39;s Portfolio</title>
     <meta name="description" content="Portfolio for Minyoung" />
     <meta name="author" content="Minyoung" />
@@ -13,6 +14,27 @@
       type="image/x-icon"
       sizes="16x16"
     />
+    <!--OG-->
+    <meta property="og:title" content="민영 포토폴리오" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="배포후 작성" />
+    <meta property="og:url" content="배포후 작성" />
+    <!--Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap"
+      rel="stylesheet"
+    />
+    <!--Font Awesome-->
+    <script
+      src="https://kit.fontawesome.com/c4014e77c3.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--CSS-->
+    <link rel="stylesheet" href="css/style.css" />
+    <!--Javascipt-->
+    <script src="src/main.js" defer></script>
   </head>
   <body></body>
 </html>
