Feat: HTML-헤더 구조 작업

--- a/index.html
+++ b/index.html
@@ -36,5 +36,40 @@
     <!--Javascipt-->
     <script src="src/main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <!--Header-->
+    <header>
+      <div>
+        <img src="assets/favicon.ico" alt="logo" />
+        <h1><a href="#">민영</a></h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#otherExperience">Other Experience</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!--Main-->
+    <main>
+      <!--Home-->
+      <section id="home"></section>
+      <!--About-->
+      <section id="about"></section>
+      <!--Skills-->
+      <section id="skills"></section>
+      <!--Projects-->
+      <section id="projects"></section>
+      <!--Other Experience-->
+      <section id="otherExperience"></section>
+      <!--Arrow Button-->
+      <aside></aside>
+    </main>
+    <!--Footer-->
+    <footer id="contact"></footer>
+  </body>
 </html>
