--- a/index.html
+++ b/index.html
@@ -57,15 +57,156 @@
     <!--Main-->
     <main>
       <!--Home-->
-      <section id="home"></section>
+      <section id="home">
+        <img src="assets/img/profile.png" alt="profile" />
+        <h2>Frontend Developer 이민영</h2>
+        <p>
+          새로운 기술 스택을 배우고 적용하는 것에 관심이 많으며 유지 보수를
+          고려하여 서비스를 구현하려고 노력합니다.
+        </p>
+        <a href="#contact">Contact</a>
+      </section>
       <!--About-->
-      <section id="about"></section>
+      <section id="about">
+        <h2>About me</h2>
+        <p>끊임없이 성장하고 도전하려고 합니다.</p>
+        <p>어려운 문제도 포기하지 않고 극복할 수 있습니다.</p>
+        <p>사용자의 편의성을 향상 시키기 위해 항상 고민합니다.</p>
+        <ul>
+          <li>
+            <i class="fa-brands fa-html5"></i>
+            <p>Front-end</p>
+            <p>
+              HTML, CSS, JavaScript, TypeScript, React, Recoil, React-query, Web
+              APIs
+            </p>
+          </li>
+          <li>
+            <i class="fa-solid fa-server"></i>
+            <p>Back-end</p>
+            <p>JavaScript, NodeJS, ExpressJS, MongoDB</p>
+          </li>
+          <li>
+            <i class="fa-solid fa-screwdriver-wrench"></i>
+            <p>Other Tools</p>
+            <p>Git ,GitHub, GitLab, Postman, Notion, Slack, Figma</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <i class="fa-solid fa-graduation-cap"></i>
+            <div>
+              <p>엘리스 SW 엔지니어 트랙 4기</p>
+              <p>2023.02 ~ 2023.06</p>
+            </div>
+          </li>
+          <li>
+            <i class="fa-solid fa-briefcase"></i>
+            <div>
+              <p>노리스페이스 Frontend Developer(Freelancer)</p>
+              <p>2022.08 ~ 2022.11</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!--Skills-->
-      <section id="skills"></section>
+      <section id="skills">
+        <h2>My Skills</h2>
+        <p>Skills & Attributes</p>
+        <div>
+          <section>
+            <h3>Coding Skills</h3>
+            <ul>
+              <li>
+                <div><span>HTML</span><span>95%</span></div>
+                <div><div style="width: 95%"></div></div>
+              </li>
+              <li>
+                <div><span>CSS</span><span>90%</span></div>
+                <div><div style="width: 90%"></d></div>
+              </li>
+              <li>
+                <div><span>JavaScript</span><span>85%</span></div>
+                <div><div style="width: 85%"></div></div>
+              </li>
+              <li>
+                <div><span>TypeScript</span><span>80%</span></div>
+                <div><div style="width: 80%"></div></div>
+              </li>
+              <li>
+                <div><span>React</span><span>90%</span></div>
+                <div><div style="width: 90%"></div></div>
+              </li>
+              <li>
+                <div><span>NodeJS</span><span>60%</span></div>
+                <div><div style="width: 60%"></div></div>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3>Tolls</h3>
+            <ul>
+              <!-- <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li> -->
+            </ul>
+          </section>
+          <section>
+            <h3>Etc</h3>
+            <ul>
+              <li>Git</li>
+              <li>Figma</li>
+              <li>algorithm</li>
+            </ul>
+          </section>
+        </div>
+      </section>
       <!--Projects-->
-      <section id="projects"></section>
+      <section id="projects">
+        <h2>My Projects</h2>
+        <p>Projects</p>
+        <ul>
+          <li><button>All</button><span>4</span></li>
+          <li><button>Front-end</button><span>3</span></li>
+          <li><button>Back-end</button><span>1</span></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="http://www.moyeora-racer.com/" target="_blank">
+              <img src="assets/img/project1.png" alt="project1">
+              <div>
+                <h3>모여라 레이서</h3>
+                <p>엘리스 교육생 및 수료생들을 위한 커뮤니티</p>
+              </div>
+            </a>
+          </li>
+          <li><a href="https://ticketwantit.shop/" target="_blank">
+            <img src="assets/img/project2.png" alt="project2">
+            <div>
+              <h3>티켓원잇</h3>
+              <p>전시, 공연 등 다양한 티켓을 구매 할 수 있는 웹 사이트</p>
+            </div>
+          </a></li>
+          <li><a href="http://gamezone.gomao9.com/" target="_blank">
+            <img src="assets/img/project3.png" alt="project3">
+            <div>
+              <h3>게임존</h3>
+              <p>MZ세대, 1980년대부터 2010년대까지 다양한 연령이 즐길 수 있는 웹 게임 사이트</p>
+            </div>
+          </a></li>
+          <li>
+            <img src="assets/img/project4.png" alt="project4">
+            <div>
+              <h3>데이터 리포트 솔루션</h3>
+              <p> 실시간 재고를 시각화 하여 재고관리 웹 구현 프로젝트</p>
+            </div>
+          </li>
+        </ul>
+      </section>
       <!--Other Experience-->
-      <section id="otherExperience"></section>
+      <section id="otherExperience"><h2>Other Experience</h2></section>
       <!--Arrow Button-->
       <aside></aside>
     </main>
