--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               </li>
               <li>
                 <div><span>CSS</span><span>90%</span></div>
-                <div><div style="width: 90%"></d></div>
+                <div><div style="width: 90%"></div></div>
               </li>
               <li>
                 <div><span>JavaScript</span><span>85%</span></div>
@@ -175,32 +175,39 @@
         <ul>
           <li>
             <a href="http://www.moyeora-racer.com/" target="_blank">
-              <img src="assets/img/project1.png" alt="project1">
+              <img src="assets/img/project1.png" alt="project1" />
               <div>
                 <h3>모여라 레이서</h3>
                 <p>엘리스 교육생 및 수료생들을 위한 커뮤니티</p>
               </div>
             </a>
           </li>
-          <li><a href="https://ticketwantit.shop/" target="_blank">
-            <img src="assets/img/project2.png" alt="project2">
-            <div>
-              <h3>티켓원잇</h3>
-              <p>전시, 공연 등 다양한 티켓을 구매 할 수 있는 웹 사이트</p>
-            </div>
-          </a></li>
-          <li><a href="http://gamezone.gomao9.com/" target="_blank">
-            <img src="assets/img/project3.png" alt="project3">
-            <div>
-              <h3>게임존</h3>
-              <p>MZ세대, 1980년대부터 2010년대까지 다양한 연령이 즐길 수 있는 웹 게임 사이트</p>
-            </div>
-          </a></li>
           <li>
-            <img src="assets/img/project4.png" alt="project4">
+            <a href="https://ticketwantit.shop/" target="_blank">
+              <img src="assets/img/project2.png" alt="project2" />
+              <div>
+                <h3>티켓원잇</h3>
+                <p>전시, 공연 등 다양한 티켓을 구매 할 수 있는 웹 사이트</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="http://gamezone.gomao9.com/" target="_blank">
+              <img src="assets/img/project3.png" alt="project3" />
+              <div>
+                <h3>게임존</h3>
+                <p>
+                  MZ세대, 1980년대부터 2010년대까지 다양한 연령이 즐길 수 있는
+                  웹 게임 사이트
+                </p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <img src="assets/img/project4.png" alt="project4" />
             <div>
               <h3>데이터 리포트 솔루션</h3>
-              <p> 실시간 재고를 시각화 하여 재고관리 웹 구현 프로젝트</p>
+              <p>실시간 재고를 시각화 하여 재고관리 웹 구현 프로젝트</p>
             </div>
           </li>
         </ul>
@@ -208,9 +215,39 @@
       <!--Other Experience-->
       <section id="otherExperience"><h2>Other Experience</h2></section>
       <!--Arrow Button-->
-      <aside></aside>
+      <aside>
+        <a href="#home" title="back to top">
+          <i class="fa-solid fa-arrow-up"></i>
+        </a>
+      </aside>
     </main>
     <!--Footer-->
-    <footer id="contact"></footer>
+    <footer id="contact">
+      <h2>Contact</h2>
+      <p>Email: zhal7779@gmail.com</p>
+      <p>phone: 010-2205-9840</p>
+      <ul>
+        <li>
+          <a
+            href="https://github.com/zhal7779"
+            title="github link"
+            target="_blank"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://acoustic-infinity-a2f.notion.site/Frontend-Developer-97e07927772848cd9fe8d9507a88df4b?pvs=4"
+            title="resume link"
+            target="_blank"
+          >
+            <i class="fa-solid fa-address-card"></i>
+          </a>
+        </li>
+      </ul>
+      <p>CREATOR : 이민영</p>
+      <p>Copyright ⓒ 2023 - 2023 Minyoung Inc. All Rights Reserved.</p>
+    </footer>
   </body>
 </html>
