--- a/index.html
+++ b/index.html
@@ -38,19 +38,23 @@
   </head>
   <body>
     <!--Header-->
-    <header>
-      <div>
-        <img src="assets/favicon.ico" alt="logo" />
-        <h1><a href="#">민영</a></h1>
+    <header class="header">
+      <div class="header-logo">
+        <img class="header-logo-img" src="assets/favicon.ico" alt="logo" />
+        <h1 class="header-logo-title"><a href="#">Minyoung</a></h1>
       </div>
       <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#otherExperience">Other Experience</a></li>
-          <li><a href="#contact">Contact</a></li>
+        <ul class="header-menu">
+          <li><a class="header-menu-item active" href="#home">Home</a></li>
+          <li><a class="header-menu-item" href="#about">About</a></li>
+          <li><a class="header-menu-item" href="#skills">Skills</a></li>
+          <li><a class="header-menu-item" href="#projects">Projects</a></li>
+          <li>
+            <a class="header-menu-item" href="#otherExperience"
+              >Other Experience</a
+            >
+          </li>
+          <li><a class="header-menu-item" href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
