--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
     <main>
       <!--Home-->
       <section id="home">
-        <img src="assets/img/profile.png" alt="profile" />
-        <h2>Frontend Developer 이민영</h2>
-        <p>
+        <img class="home-profile" src="assets/img/profile.png" alt="profile" />
+        <h2 class="home-title">
+          Frontend Developer
+          <strong class="home-title-strong">이민영</strong>
+        </h2>
+        <p class="home-description">
           새로운 기술 스택을 배우고 적용하는 것에 관심이 많으며 유지 보수를
           고려하여 서비스를 구현하려고 노력합니다.
         </p>
-        <a href="#contact">Contact</a>
+        <a class="home-contact" href="#contact">Contact Me</a>
       </section>
       <!--About-->
       <section id="about">
