--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <a class="home-contact" href="#contact">Contact Me</a>
       </section>
       <!--About-->
-      <section id="about">
-        <h2>About me</h2>
-        <p>끊임없이 성장하고 도전하려고 합니다.</p>
+      <section id="about" class="section">
+        <h2 class="title">About me</h2>
+        <p class="description">끊임없이 성장하고 도전하려고 합니다.</p>
         <p>어려운 문제도 포기하지 않고 극복할 수 있습니다.</p>
         <p>사용자의 편의성을 향상 시키기 위해 항상 고민합니다.</p>
         <ul>
@@ -117,9 +117,9 @@
         </ul>
       </section>
       <!--Skills-->
-      <section id="skills">
-        <h2>My Skills</h2>
-        <p>Skills & Attributes</p>
+      <section id="skills" class="section">
+        <h2 class="title">My Skills</h2>
+        <p class="description">Skills & Attributes</p>
         <div>
           <section>
             <h3>Coding Skills</h3>
@@ -171,9 +171,9 @@
         </div>
       </section>
       <!--Projects-->
-      <section id="projects">
-        <h2>My Projects</h2>
-        <p>Projects</p>
+      <section id="projects" class="section">
+        <h2 class="title">My Projects</h2>
+        <p class="description">Projects</p>
         <ul>
           <li><button>All</button><span>4</span></li>
           <li><button>Front-end</button><span>3</span></li>
@@ -220,7 +220,9 @@
         </ul>
       </section>
       <!--Other Experience-->
-      <section id="otherExperience"><h2>Other Experience</h2></section>
+      <section id="otherExperience" class="section">
+        <h2 class="title">Other Experience</h2>
+      </section>
       <!--Arrow Button-->
       <aside>
         <a href="#home" title="back to top">
@@ -229,10 +231,13 @@
       </aside>
     </main>
     <!--Footer-->
-    <footer id="contact">
-      <h2>Contact</h2>
-      <p>Email: zhal7779@gmail.com</p>
-      <p>phone: 010-2205-9840</p>
+    <footer id="contact" class="section">
+      <h2 class="title">Contact</h2>
+      <div class="description">
+        <p>Email: zhal7779@gmail.com</p>
+        <p>phone: 010-2205-9840</p>
+      </div>
+
       <ul>
         <li>
           <a
