--- a/index.html
+++ b/index.html
@@ -74,44 +74,47 @@
         <a class="home-contact" href="#contact">Contact Me</a>
       </section>
       <!--About-->
-      <section id="about" class="section">
+      <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
-        <p class="description">끊임없이 성장하고 도전하려고 합니다.</p>
-        <p>어려운 문제도 포기하지 않고 극복할 수 있습니다.</p>
-        <p>사용자의 편의성을 향상 시키기 위해 항상 고민합니다.</p>
-        <ul>
-          <li>
-            <i class="fa-brands fa-html5"></i>
-            <p>Front-end</p>
+        <p class="description">
+          끊임없이 성장하고 도전하려고 하며 사용자의 편의성을 향상 시키기 위해
+          항상 고민합니다.
+        </p>
+        <ul class="majors">
+          <li class="major">
+            <i class="fa-brands fa-html5 major-icon"></i>
+            <p class="major-title">Front-end</p>
             <p>
               HTML, CSS, JavaScript, TypeScript, React, Recoil, React-query, Web
               APIs
             </p>
           </li>
-          <li>
-            <i class="fa-solid fa-server"></i>
-            <p>Back-end</p>
+          <li class="major">
+            <i class="fa-solid fa-server major-icon"></i>
+            <p class="major-title">Back-end</p>
             <p>JavaScript, NodeJS, ExpressJS, MongoDB</p>
           </li>
-          <li>
-            <i class="fa-solid fa-screwdriver-wrench"></i>
-            <p>Other Tools</p>
+          <li class="major">
+            <i class="fa-solid fa-screwdriver-wrench major-icon"></i>
+            <p class="major-title">Other Tools</p>
             <p>Git ,GitHub, GitLab, Postman, Notion, Slack, Figma</p>
           </li>
         </ul>
-        <ul>
-          <li>
-            <i class="fa-solid fa-graduation-cap"></i>
+        <ul class="jobs">
+          <li class="job">
+            <i class="fa-solid fa-graduation-cap jobs-icon"></i>
             <div>
-              <p>엘리스 SW 엔지니어 트랙 4기</p>
-              <p>2023.02 ~ 2023.06</p>
+              <p class="job-name">엘리스 SW 엔지니어 트랙 4기</p>
+              <p class="job-period">2023.02 ~ 2023.06</p>
             </div>
           </li>
-          <li>
-            <i class="fa-solid fa-briefcase"></i>
+          <li class="job">
+            <i class="fa-solid fa-briefcase jobs-icon"></i>
             <div>
-              <p>노리스페이스 Frontend Developer(Freelancer)</p>
-              <p>2022.08 ~ 2022.11</p>
+              <p class="job-name">
+                노리스페이스 Frontend Developer(Freelancer)
+              </p>
+              <p class="job-period">2022.08 ~ 2022.11</p>
             </div>
           </li>
         </ul>
