Design: CSS - skills 스타일 적용

--- a/index.html
+++ b/index.html
@@ -121,56 +121,81 @@
       </section>
       <!--Skills-->
       <section id="skills" class="section">
-        <h2 class="title">My Skills</h2>
-        <p class="description">Skills & Attributes</p>
-        <div>
-          <section>
-            <h3>Coding Skills</h3>
-            <ul>
-              <li>
-                <div><span>HTML</span><span>95%</span></div>
-                <div><div style="width: 95%"></div></div>
-              </li>
-              <li>
-                <div><span>CSS</span><span>90%</span></div>
-                <div><div style="width: 90%"></div></div>
-              </li>
-              <li>
-                <div><span>JavaScript</span><span>85%</span></div>
-                <div><div style="width: 85%"></div></div>
-              </li>
-              <li>
-                <div><span>TypeScript</span><span>80%</span></div>
-                <div><div style="width: 80%"></div></div>
-              </li>
-              <li>
-                <div><span>React</span><span>90%</span></div>
-                <div><div style="width: 90%"></div></div>
-              </li>
-              <li>
-                <div><span>NodeJS</span><span>60%</span></div>
-                <div><div style="width: 60%"></div></div>
-              </li>
-            </ul>
-          </section>
-          <section>
-            <h3>Tolls</h3>
-            <ul>
-              <!-- <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li> -->
-            </ul>
-          </section>
-          <section>
-            <h3>Etc</h3>
-            <ul>
-              <li>Git</li>
-              <li>Figma</li>
-              <li>algorithm</li>
-            </ul>
-          </section>
+        <div class="max-container">
+          <h2 class="title">My Skills</h2>
+          <p class="description">Skills & Attributes</p>
+          <div class="skills">
+            <section class="skills-coding">
+              <h3 class="skills-title">Coding Skills</h3>
+              <ul>
+                <li class="skills-bar">
+                  <div class="bar-metadata">
+                    <span>HTML</span><span>95%</span>
+                  </div>
+                  <div class="bar-bg">
+                    <div class="bar-value" style="width: 95%"></div>
+                  </div>
+                </li>
+                <li class="skills-bar">
+                  <div class="bar-metadata">
+                    <span>CSS</span><span>90%</span>
+                  </div>
+                  <div class="bar-bg">
+                    <div class="bar-value" style="width: 90%"></div>
+                  </div>
+                </li>
+                <li class="skills-bar">
+                  <div class="bar-metadata">
+                    <span>JavaScript</span><span>85%</span>
+                  </div>
+                  <div class="bar-bg">
+                    <div class="bar-value" style="width: 85%"></div>
+                  </div>
+                </li>
+                <li class="skills-bar">
+                  <div class="bar-metadata">
+                    <span>TypeScript</span><span>80%</span>
+                  </div>
+                  <div class="bar-bg">
+                    <div class="bar-value" style="width: 80%"></div>
+                  </div>
+                </li>
+                <li class="skills-bar">
+                  <div class="bar-metadata">
+                    <span>React</span><span>90%</span>
+                  </div>
+                  <div class="bar-bg">
+                    <div class="bar-value" style="width: 90%"></div>
+                  </div>
+                </li>
+                <li class="skills-bar">
+                  <div class="bar-metadata">
+                    <span>NodeJS</span><span>60%</span>
+                  </div>
+                  <div class="bar-bg">
+                    <div class="bar-value" style="width: 60%"></div>
+                  </div>
+                </li>
+              </ul>
+            </section>
+            <section class="skills-tools">
+              <h3 class="skills-title">Tools</h3>
+              <ul>
+                <li>Visual Studio code</li>
+                <li>Figma</li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
+            </section>
+            <section class="skills-etc">
+              <h3 class="skills-title">Etc</h3>
+              <ul>
+                <li>Git</li>
+                <li>algorithm</li>
+              </ul>
+            </section>
+          </div>
         </div>
       </section>
       <!--Projects-->
