--- a/index.html
+++ b/index.html
@@ -200,52 +200,82 @@
       </section>
       <!--Projects-->
       <section id="projects" class="section">
-        <h2 class="title">My Projects</h2>
-        <p class="description">Projects</p>
-        <ul>
-          <li><button>All</button><span>4</span></li>
-          <li><button>Front-end</button><span>3</span></li>
-          <li><button>Back-end</button><span>1</span></li>
-        </ul>
-        <ul>
-          <li>
-            <a href="http://www.moyeora-racer.com/" target="_blank">
-              <img src="assets/img/project1.png" alt="project1" />
-              <div>
-                <h3>모여라 레이서</h3>
-                <p>엘리스 교육생 및 수료생들을 위한 커뮤니티</p>
+        <div class="max-container">
+          <h2 class="title">My Projects</h2>
+          <p class="description">Projects</p>
+          <ul class="categories">
+            <li>
+              <button class="category category-selected">
+                All<span class="category-count">4</span>
+              </button>
+            </li>
+            <li>
+              <button class="category">
+                Front-end<span class="category-count">3</span>
+              </button>
+            </li>
+            <li>
+              <button class="category">
+                Back-end<span class="category-count">1</span>
+              </button>
+            </li>
+          </ul>
+          <ul class="projects">
+            <li class="project">
+              <a href="http://www.moyeora-racer.com/" target="_blank">
+                <img
+                  src="assets/img/project1.png"
+                  alt="project1"
+                  class="project-img"
+                />
+                <div class="project-meatadata">
+                  <h3 class="project-tilte">모여라 레이서</h3>
+                  <p>엘리스 교육생 및 수료생들을 위한 커뮤니티</p>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a href="https://ticketwantit.shop/" target="_blank">
+                <img
+                  src="assets/img/project2.png"
+                  alt="project2"
+                  class="project-img"
+                />
+                <div class="project-meatadata">
+                  <h3 class="project-tilte">티켓원잇</h3>
+                  <p>전시, 공연 등 다양한 티켓을 구매 할 수 있는 웹 사이트</p>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <a href="http://gamezone.gomao9.com/" target="_blank">
+                <img
+                  src="assets/img/project3.png"
+                  alt="project3"
+                  class="project-img"
+                />
+                <div class="project-meatadata">
+                  <h3 class="project-tilte">게임존</h3>
+                  <p>
+                    MZ세대, 1980년대부터 2010년대까지 다양한 연령이 즐길 수 있는
+                    웹 게임 사이트
+                  </p>
+                </div>
+              </a>
+            </li>
+            <li class="project">
+              <img
+                src="assets/img/project4.png"
+                alt="project4"
+                class="project-img"
+              />
+              <div class="project-meatadata">
+                <h3 class="project-tilte">데이터 리포트 솔루션</h3>
+                <p>실시간 재고를 시각화 하여 재고관리 웹 구현 프로젝트</p>
               </div>
-            </a>
-          </li>
-          <li>
-            <a href="https://ticketwantit.shop/" target="_blank">
-              <img src="assets/img/project2.png" alt="project2" />
-              <div>
-                <h3>티켓원잇</h3>
-                <p>전시, 공연 등 다양한 티켓을 구매 할 수 있는 웹 사이트</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a href="http://gamezone.gomao9.com/" target="_blank">
-              <img src="assets/img/project3.png" alt="project3" />
-              <div>
-                <h3>게임존</h3>
-                <p>
-                  MZ세대, 1980년대부터 2010년대까지 다양한 연령이 즐길 수 있는
-                  웹 게임 사이트
-                </p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <img src="assets/img/project4.png" alt="project4" />
-            <div>
-              <h3>데이터 리포트 솔루션</h3>
-              <p>실시간 재고를 시각화 하여 재고관리 웹 구현 프로젝트</p>
-            </div>
-          </li>
-        </ul>
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Other Experience-->
       <section id="otherExperience" class="section">
