Design: CSS - footer 스타일 적용

--- a/index.html
+++ b/index.html
@@ -283,41 +283,45 @@
       </section>
       <!--Arrow Button-->
       <aside>
-        <a href="#home" title="back to top">
+        <a class="arrow-btn" href="#home" title="back to top">
           <i class="fa-solid fa-arrow-up"></i>
         </a>
       </aside>
     </main>
     <!--Footer-->
     <footer id="contact" class="section">
-      <h2 class="title">Contact</h2>
-      <div class="description">
-        <p>Email: zhal7779@gmail.com</p>
-        <p>phone: 010-2205-9840</p>
-      </div>
+      <div class="max-container">
+        <h2 class="title">Contact</h2>
+        <div class="description">
+          <p>Email. zhal7779@gmail.com</p>
+          <p>phone. 010-2205-9840</p>
+        </div>
 
-      <ul>
-        <li>
-          <a
-            href="https://github.com/zhal7779"
-            title="github link"
-            target="_blank"
-          >
-            <i class="fa-brands fa-github"></i>
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://acoustic-infinity-a2f.notion.site/Frontend-Developer-97e07927772848cd9fe8d9507a88df4b?pvs=4"
-            title="resume link"
-            target="_blank"
-          >
-            <i class="fa-solid fa-address-card"></i>
-          </a>
-        </li>
-      </ul>
-      <p>CREATOR : 이민영</p>
-      <p>Copyright ⓒ 2023 - 2023 Minyoung Inc. All Rights Reserved.</p>
+        <ul class="contact-links">
+          <li>
+            <a
+              class="contact-link"
+              href="https://github.com/zhal7779"
+              title="github link"
+              target="_blank"
+            >
+              <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              class="contact-link"
+              href="https://acoustic-infinity-a2f.notion.site/Frontend-Developer-97e07927772848cd9fe8d9507a88df4b?pvs=4"
+              title="resume link"
+              target="_blank"
+            >
+              <i class="fa-solid fa-address-card"></i>
+            </a>
+          </li>
+        </ul>
+        <p>CREATOR : 이민영</p>
+        <p>Copyright ⓒ 2023 - 2023 Minyoung Inc. All Rights Reserved.</p>
+      </div>
     </footer>
   </body>
 </html>
