Design: CSS - other experience 스타일 적용

--- a/index.html
+++ b/index.html
@@ -280,6 +280,40 @@
       <!--Other Experience-->
       <section id="otherExperience" class="section">
         <h2 class="title">Other Experience</h2>
+        <section class="max-container">
+          <p class="experience-title">
+            <i class="fa-solid fa-trophy"></i>Award
+          </p>
+          <ul class="experience-container">
+            <li class="experience-item">
+              <p class="experience-item-title">
+                엘리스 1차 팀 프로젝트
+                <strong class="experience-item-strong">대상 수상</strong>
+              </p>
+              <p>2023.04.17 ~ 2023.04.28</p>
+            </li>
+            <li class="experience-item">
+              <p class="experience-item-title">
+                엘리스 2차 팀 프로젝트
+                <strong class="experience-item-strong"
+                  >우수 프로젝트 선정</strong
+                >
+              </p>
+              <p>2023.05.29 ~ 2023.06.16</p>
+            </li>
+          </ul>
+          <p class="experience-title">
+            <i class="fa-solid fa-award"></i>Certificate
+          </p>
+          <ul class="experience-container">
+            <li class="experience-item">
+              <p class="experience-item-title">
+                정보 처리 산업 기사 (한국 산업 인력 공단)
+              </p>
+              <p>2021.11.26</p>
+            </li>
+          </ul>
+        </section>
       </section>
       <!--Arrow Button-->
       <aside>
