Design: CSS - 반응형 스타일 적용

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img class="header-logo-img" src="assets/favicon.ico" alt="logo" />
         <h1 class="header-logo-title"><a href="#">Minyoung</a></h1>
       </div>
-      <nav>
+      <nav class="header-nav">
         <ul class="header-menu">
           <li><a class="header-menu-item active" href="#home">Home</a></li>
           <li><a class="header-menu-item" href="#about">About</a></li>
