Feat: JS - header 모바일 메뉴 기능 구현

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <h1 class="header-logo-title"><a href="#">Minyoung</a></h1>
       </div>
       <nav class="header-nav">
+        <button class="menu-toggle" area-label="navigation menu toggle">
+          <i class="fa-solid fa-bars"></i>
+        </button>
         <ul class="header-menu">
           <li><a class="header-menu-item active" href="#home">Home</a></li>
           <li><a class="header-menu-item" href="#about">About</a></li>
