Feat: JS - 스크롤시 섹션 id와 동일한 메뉴 활성화 기능 구현

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <!--Javascipt-->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
+    <script type="module" src="src/activeMenu.js" defer></script>
   </head>
   <body>
     <!--Header-->
