Design: CSS - 전체 색상 변경

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header class="header">
       <div class="header-logo">
         <img class="header-logo-img" src="assets/favicon.ico" alt="logo" />
-        <h1 class="header-logo-title"><a href="#">Minyoung</a></h1>
+        <h1 class="header-logo-title"><a href="#">Minyoung Portfolio</a></h1>
       </div>
       <nav class="header-nav">
         <button class="menu-toggle" area-label="navigation menu toggle">
@@ -82,6 +82,19 @@
             고려하여 서비스를 구현하려고 노력합니다.
           </p>
           <a class="home-contact" href="#contact">Contact Me</a>
+        </div>
+        <div class="home-devider">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <path
+              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+              class="shape-fill"
+            ></path>
+          </svg>
         </div>
       </section>
       <!--About-->
@@ -308,14 +321,14 @@
             <i class="fa-solid fa-trophy"></i>Award
           </p>
           <ul class="experience-container">
-            <li class="experience-item">
+            <li class="experience-item award">
               <p class="experience-item-title">
                 엘리스 1차 팀 프로젝트
                 <strong class="experience-item-strong">대상 수상</strong>
               </p>
               <p>2023.04.17 ~ 2023.04.28</p>
             </li>
-            <li class="experience-item">
+            <li class="experience-item award">
               <p class="experience-item-title">
                 엘리스 2차 팀 프로젝트
                 <strong class="experience-item-strong"
@@ -329,7 +342,7 @@
             <i class="fa-solid fa-award"></i>Certificate
           </p>
           <ul class="experience-container">
-            <li class="experience-item">
+            <li class="experience-item certificate">
               <p class="experience-item-title">
                 정보 처리 산업 기사 (한국 산업 인력 공단)
               </p>
@@ -378,6 +391,16 @@
         </ul>
         <p>CREATOR : 이민영</p>
         <p>Copyright ⓒ 2023 - 2023 Minyoung Inc. All Rights Reserved.</p>
+      </div>
+      <div class="custom-shape-divider-top-1694382660">
+        <svg
+          data-name="Layer 1"
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1200 120"
+          preserveAspectRatio="none"
+        >
+          <path d="M1200 0L0 0 598.97 114.72 1200 0z" class="shape-fill"></path>
+        </svg>
       </div>
     </footer>
   </body>
