Feat: portfolio 연결 버튼 추가

--- a/index.html
+++ b/index.html
@@ -81,7 +81,15 @@
             새로운 기술 스택을 배우고 적용하는 것에 관심이 많으며 유지 보수를
             고려하여 서비스를 구현하려고 노력합니다.
           </p>
-          <a class="home-contact" href="#contact">Contact Me</a>
+          <div class="home-btn-container">
+            <a class="home-btn contact" href="#contact">Contact</a>
+            <a
+              class="home-btn resume"
+              href="https://acoustic-infinity-a2f.notion.site/Frontend-Developer-97e07927772848cd9fe8d9507a88df4b?pvs=4"
+              target="_blank"
+              >Resume</a
+            >
+          </div>
         </div>
         <div class="home-devider">
           <svg
@@ -247,7 +255,7 @@
           <ul class="projects">
             <li class="project" data-value="front">
               <a
-                href="http://www.moyeora-racer.com/"
+                href="https://github.com/zhal7779/FE-Mora"
                 data-type="front"
                 target="_blank"
               >
@@ -264,7 +272,7 @@
             </li>
             <li class="project" data-value="front">
               <a
-                href="https://ticketwantit.shop/"
+                href="https://github.com/yooha0518/Be-TicketWantit"
                 data-type="back"
                 target="_blank"
               >
@@ -281,7 +289,7 @@
             </li>
             <li class="project" data-value="back">
               <a
-                href="http://gamezone.gomao9.com/"
+                href="https://github.com/MZgaMeZone/gaMeZone"
                 data-type="front"
                 target="_blank"
               >
