Feat: HTML contact - 연결 링크 추가,skills - ㅅ스킬 추가

--- a/index.html
+++ b/index.html
@@ -215,15 +215,16 @@
               <ul>
                 <li>Visual Studio code</li>
                 <li>Figma</li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Notion</li>
+                <li>Slack</li>
+                <li>Postman</li>
               </ul>
             </section>
             <section class="skills-etc">
               <h3 class="skills-title">Etc</h3>
               <ul>
                 <li>Git</li>
+                <li>PWA</li>
                 <li>algorithm</li>
               </ul>
             </section>
@@ -234,7 +235,7 @@
       <section id="projects" class="section">
         <div class="max-container">
           <h2 class="title">My Projects</h2>
-          <p class="description">Projects</p>
+          <p class="description">협업하여 진행한 프로젝트 입니다.</p>
           <ul class="categories">
             <li>
               <button class="category category-selected" data-key="all">
@@ -384,6 +385,16 @@
               target="_blank"
             >
               <i class="fa-brands fa-github"></i>
+            </a>
+          </li>
+          <li>
+            <a
+              class="contact-link"
+              href="https://www.linkedin.com/in/민영-이-37b879271"
+              title="linkendin link"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin"></i>
             </a>
           </li>
           <li>
