--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     <!--OG-->
     <meta property="og:title" content="민영 포토폴리오" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="배포후 작성" />
-    <meta property="og:url" content="배포후 작성" />
+    <meta
+      property="og:image"
+      content="https://zhal7779.github.io/portfolio/assets/og.webp"
+    />
+    <meta property="og:url" content="https://zhal7779.github.io/portfolio/" />
     <!--Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -78,8 +81,8 @@
             <strong class="home-title-strong">이민영</strong>
           </h2>
           <p class="home-description">
-            새로운 기술 스택을 배우고 적용하는 것에 관심이 많으며 유지 보수를
-            고려하여 서비스를 구현하려고 노력합니다.
+            오늘의 노력이 내일을 위한 준비이며, 계속해서 성장하고 있는 개발자
+            이민영 입니다.
           </p>
           <div class="home-btn-container">
             <a class="home-btn contact" href="#contact">Contact</a>
@@ -108,10 +111,16 @@
       <!--About-->
       <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
-        <p class="description">
-          끊임없이 성장하고 도전하려고 하며 사용자의 편의성을 향상 시키기 위해
-          항상 고민합니다.
-        </p>
+        <ul class="description">
+          <li>
+            <p>새로운 기술 스택을 배우고 적용하는 것에 관심이 많습니다.</p>
+          </li>
+          <li>
+            <p>유지 보수를 고려하여 서비스를 구현하려고 노력합니다.</p>
+          </li>
+          <li><p>사용자의 편의성을 향상 시키기 위해 항상 고민합니다.</p></li>
+        </ul>
+
         <ul class="majors">
           <li class="major">
             <i class="fa-brands fa-html5 major-icon"></i>
