--- a/index.html
+++ b/index.html
@@ -111,41 +111,42 @@
       <!--About-->
       <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
-        <ul class="description">
-          <li>
-            <p>새로운 기술 스택을 배우고 적용하는 것에 관심이 많습니다.</p>
-          </li>
-          <li>
-            <p>유지 보수를 고려하여 서비스를 구현하려고 노력합니다.</p>
-          </li>
-          <li><p>사용자의 편의성을 향상 시키기 위해 항상 고민합니다.</p></li>
-        </ul>
 
-        <ul class="majors">
-          <li class="major">
-            <i class="fa-brands fa-html5 major-icon"></i>
-            <p class="major-title">Front-end</p>
+        <p class="description">
+          지속적으로 기술 스택을 업데이트하고 새로운 기술을 적용하여 서비스를
+          혁신하며, 항상 사용자들에게 더 나은 사용자 경험을 제공하려고
+          노력합니다.
+        </p>
+        <ul class="advantages">
+          <li class="advantage">
+            <i class="fa-solid fa-terminal advantage-icon"></i>
+            <p>웹/앱 서비스의 프론트엔드 개발 경험</p>
+          </li>
+          <li class="advantage">
+            <i class="fa-solid fa-terminal advantage-icon"></i>
+            <p>SPA 방식으로 웹페이지 구현 경험 다수</p>
+          </li>
+          <li class="advantage">
+            <i class="fa-solid fa-terminal advantage-icon"></i>
             <p>
-              HTML, CSS, JavaScript, TypeScript, React, Recoil, React-query, Web
-              APIs
+              서버 개발 경험으로 클라이언트와 서버 통신에 대한 이해를 바탕으로
+              개발 가능
             </p>
           </li>
-          <li class="major">
-            <i class="fa-solid fa-server major-icon"></i>
-            <p class="major-title">Back-end</p>
-            <p>JavaScript, NodeJS, ExpressJS, MongoDB</p>
+          <li class="advantage">
+            <i class="fa-solid fa-terminal advantage-icon"></i>
+            <p>다양한 에러를 접해봄으로써 장애 대응 능력</p>
           </li>
-          <li class="major">
-            <i class="fa-solid fa-screwdriver-wrench major-icon"></i>
-            <p class="major-title">Other Tools</p>
-            <p>Git ,GitHub, GitLab, Postman, Notion, Slack, Figma</p>
+          <li class="advantage">
+            <i class="fa-solid fa-terminal advantage-icon"></i>
+            <p>기획 단계부터 시작한 다수의 팀 프로젝트 협업 경험</p>
           </li>
         </ul>
         <ul class="jobs">
           <li class="job">
             <i class="fa-solid fa-graduation-cap jobs-icon"></i>
             <div>
-              <p class="job-name">엘리스 SW 엔지니어 트랙 4기</p>
+              <p class="job-name">엘리스 SW 엔지니어 트랙 4기 수료</p>
               <p class="job-period">2023.02 ~ 2023.06</p>
             </div>
           </li>
@@ -162,9 +163,30 @@
       </section>
       <!--Skills-->
       <section id="skills" class="section">
-        <div class="max-container">
+        <div class="max-container skills-container">
           <h2 class="title">My Skills</h2>
-          <p class="description">Skills & Attributes</p>
+          <p class="sub-title">Skills</p>
+          <ul class="majors">
+            <li class="major">
+              <i class="fa-brands fa-html5 major-icon"></i>
+              <p class="major-title">Front-end</p>
+              <p>
+                HTML, CSS, JavaScript, TypeScript, React, Recoil, React-query,
+                Web APIs
+              </p>
+            </li>
+            <li class="major">
+              <i class="fa-solid fa-server major-icon"></i>
+              <p class="major-title">Back-end</p>
+              <p>JavaScript, NodeJS, ExpressJS, MySQL, MongoDB</p>
+            </li>
+            <li class="major">
+              <i class="fa-solid fa-screwdriver-wrench major-icon"></i>
+              <p class="major-title">Other Tools</p>
+              <p>Git ,GitHub, GitLab, Postman, Notion, Slack, Figma</p>
+            </li>
+          </ul>
+          <p class="sub-title">Attributes</p>
           <div class="skills">
             <section class="skills-coding">
               <h3 class="skills-title">Coding Skills</h3>
@@ -234,6 +256,7 @@
               <ul>
                 <li>Git</li>
                 <li>PWA</li>
+                <li>Rinux</li>
                 <li>algorithm</li>
               </ul>
             </section>
@@ -335,9 +358,7 @@
       <section id="otherExperience" class="section">
         <h2 class="title">Other Experience</h2>
         <section class="max-container">
-          <p class="experience-title">
-            <i class="fa-solid fa-trophy"></i>Award
-          </p>
+          <p class="sub-title"><i class="fa-solid fa-trophy"></i>Award</p>
           <ul class="experience-container">
             <li class="experience-item award">
               <p class="experience-item-title">
@@ -356,9 +377,7 @@
               <p>2023.05.29 ~ 2023.06.16</p>
             </li>
           </ul>
-          <p class="experience-title">
-            <i class="fa-solid fa-award"></i>Certificate
-          </p>
+          <p class="sub-title"><i class="fa-solid fa-award"></i>Certificate</p>
           <ul class="experience-container">
             <li class="experience-item certificate">
               <p class="experience-item-title">
