Feat: JS- project 클릭시 설명란 트랜지션 효과 적용

--- a/index.html
+++ b/index.html
@@ -333,7 +333,10 @@
             </li>
           </ul>
           <ul class="project-description">
-            <li class="description-item" data-project-value="moyera-racer">
+            <li
+              class="description-item selected-project"
+              data-project-value="moyera-racer"
+            >
               <div class="description-container">
                 <section class="description-content information">
                   <div class="description-briefly">
