Design: CSS - 480px, 768px, 1024px 반응형  구간 적용

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     ></script>
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
     <!--Javascipt-->
     <script type="module" src="src/main.js" defer></script>
     <script type="module" src="src/projects.js" defer></script>
@@ -786,7 +787,7 @@
           </li>
         </ul>
         <p>CREATOR : 이민영</p>
-        <p>Copyright ⓒ 2023 - 2023 Minyoung Inc. All Rights Reserved.</p>
+        <p>Copyright ⓒ 2023 - 2023 Minyoung. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
