Feat: skills-coding 섹션 내용 수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       sizes="16x16"
     />
     <!--OG-->
-    <meta property="og:title" content="민영 포토폴리오" />
+    <meta property="og:title" content="민영 포트폴리오" />
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
@@ -196,7 +196,7 @@
                 </li>
                 <li class="skills-bar">
                   <div class="bar-metadata">
-                    <span>JavaScript</span><span>85%</span>
+                    <span>JavaScript</span><span>80%</span>
                   </div>
                   <div class="bar-bg">
                     <div class="bar-value" style="width: 85%"></div>
@@ -204,7 +204,7 @@
                 </li>
                 <li class="skills-bar">
                   <div class="bar-metadata">
-                    <span>TypeScript</span><span>80%</span>
+                    <span>TypeScript</span><span>70%</span>
                   </div>
                   <div class="bar-bg">
                     <div class="bar-value" style="width: 80%"></div>
@@ -212,18 +212,10 @@
                 </li>
                 <li class="skills-bar">
                   <div class="bar-metadata">
-                    <span>React</span><span>90%</span>
+                    <span>React</span><span>80%</span>
                   </div>
                   <div class="bar-bg">
                     <div class="bar-value" style="width: 90%"></div>
-                  </div>
-                </li>
-                <li class="skills-bar">
-                  <div class="bar-metadata">
-                    <span>NodeJS</span><span>60%</span>
-                  </div>
-                  <div class="bar-bg">
-                    <div class="bar-value" style="width: 60%"></div>
                   </div>
                 </li>
               </ul>
